# kinematics

./: CMakeLists.txt  package.xml
src/: __init__.py  kinematics.py
src/kinematics/: __init__.py
src/kinematics/kdl_pybind/: kdl_pybind.cpp
src/kinematics/trac_ik_pybind/: trac_ik_pybind.cpp
